--- a/products.html
+++ b/products.html
@@ -12,15 +12,14 @@ header {
   background: #131921;
   color: white;
   padding: 10px;
-  font-size: 18px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
   position: sticky;
   top: 0;
   z-index: 1000;
 }
-.header-buttons { margin-top: 5px; display: flex; flex-wrap: wrap; justify-content: center; gap:5px;}
+.header-buttons { display: flex; justify-content: center; gap:5px; flex-wrap: wrap; margin-top:5px;}
 .header-buttons button {
   background: #ffd814;
   border: 1px solid #fcd200;
@@ -28,46 +27,11 @@ header {
   border-radius: 6px;
   cursor: pointer;
   font-weight: bold;
+  position: relative;
 }
 .header-buttons button:hover { background: #f7ca00; }
 
-/* زر الجرس */
-#notifBtn {
-  position: relative;
-  background: #ff4444;
-  border: 1px solid #cc0000;
-  padding: 6px 12px;
-  border-radius: 6px;
-  cursor: pointer;
-  font-weight: bold;
-  color: #fff;
-}
-#notif-count {
-  position: absolute;
-  top: -8px;
-  right: -8px;
-  background: yellow;
-  color: black;
-  font-size: 12px;
-  font-weight: bold;
-  padding: 2px 6px;
-  border-radius: 50%;
-  display: none;
-}
-
-/* بانر المنتج الجديد */
-#newBanner {
-  display: none;
-  background: red;
-  color: white;
-  text-align: center;
-  padding: 10px;
-  font-size: 20px;
-  font-weight: bold;
-}
-
-/* عداد السلة على الزرار */
-#cartBtn { position: relative; }
+/* عداد السلة */
 #cart-count {
   position: absolute;
   top: -8px;
@@ -81,238 +45,214 @@ header {
   display: none;
 }
 
-/* مربع البحث */
-#searchBox {
-  width: 80%;
-  max-width: 300px;
-  margin: 8px 0;
-  padding: 8px;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-  font-size: 14px;
+/* زر الجرس */
+#notifBtn span {
+  position: absolute;
+  top: -8px;
+  right: -8px;
+  background: red;
+  color: #fff;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 2px 6px;
+  border-radius: 50%;
+  display: none;
 }
 
-/* المنتجات على شكل كروت */
+/* بانر المنتج الجديد */
+#newBanner {
+  display: none;
+  background: red;
+  color: white;
+  text-align: center;
+  padding: 8px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+/* مربع البحث */
+#searchBox {
+  display: block;
+  margin: 10px auto;
+  padding: 8px;
+  width: 85%;
+  max-width: 350px;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+  box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+}
+
+/* المنتجات */
 #products-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-  gap: 15px;
-  padding: 15px;
+  grid-template-columns: repeat(auto-fill,minmax(180px,1fr));
+  gap: 12px;
+  padding: 10px;
 }
 .product {
   background: #fff;
   border-radius: 10px;
   overflow: hidden;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  transition: 0.3s;
-}
-.product:hover { box-shadow: 0 5px 15px rgba(0,0,0,0.3); }
-.product img {
-  width: 100%;
-  height: 150px;
-  object-fit: contain;
-  background: #f9f9f9;
-}
-.product-info {
-  padding: 10px;
   text-align: center;
+  transition:0.3s;
 }
-.product-info .name { font-size: 16px; margin-bottom: 5px; color: #333; font-weight: bold; }
-.product-info .price { font-size: 14px; color: #8a2be2; margin-bottom: 8px; }
-.product input {
-  width: 50px; margin: 5px 0; border-radius: 5px; border: 1px solid #ccc; text-align: center;
-}
-.product button {
-  padding: 8px 10px;
-  border: none;
-  border-radius: 5px;
-  background: #8a2be2;
-  color: #fff;
-  cursor: pointer;
-  font-weight: bold;
-  transition: 0.3s;
-}
-.product button:hover { background: #6a1fbf; transform: scale(1.05); }
+.product:hover { box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
+.product img { width: 100%; height: 140px; object-fit: contain; background:#f9f9f9; }
+.product-info { padding:8px; }
+.product-info .name { font-weight:bold; color:#333; margin-bottom:5px; }
+.product-info .price { color:#8a2be2; margin-bottom:5px; font-weight:bold; }
+.product input { width:50px; margin:5px 0; border-radius:5px; border:1px solid #ccc; text-align:center; }
+.product button { padding:6px 10px; border:none; border-radius:5px; background:#8a2be2; color:#fff; cursor:pointer; font-weight:bold; transition:0.3s; }
+.product button:hover { background:#6a1fbf; transform:scale(1.05); }
 
-/* نافذة إجمالي الفاتورة */
+/* نافذة اجمالي الفاتورة */
 #totalModal {
-  display: none;
-  position: fixed;
-  top: 50%; left: 50%;
-  transform: translate(-50%,-50%);
-  background: #fff;
-  padding: 20px;
-  border-radius: 15px;
-  box-shadow: 0 3px 15px rgba(0,0,0,0.3);
-  text-align: center;
-  z-index: 1002;
-  width: 95%;
-  max-width: 500px;
-  max-height: 85%;
-  overflow-y: auto;
+  display:none;
+  position:fixed;
+  top:50%; left:50%;
+  transform:translate(-50%,-50%);
+  background:#fff;
+  padding:15px;
+  border-radius:12px;
+  box-shadow:0 3px 15px rgba(0,0,0,0.3);
+  z-index:1002;
+  width:90%;
+  max-width:450px;
+  max-height:80%;
+  overflow-y:auto;
+  text-align:right;
 }
-#totalModal h2 { font-size: 20px; margin-bottom: 15px; color: #8a2be2; }
-#totalModal button {
-  margin: 5px;
-  padding: 8px 15px;
-  border: none;
-  border-radius: 10px;
-  background: #8a2be2;
-  color: #fff;
-  cursor: pointer;
-  font-weight: bold;
-  transition: 0.3s;
-}
-#totalModal button:hover { background: #6a1fbf; }
+#totalModal h2 { color:#8a2be2; margin-bottom:12px; }
+#totalModal button { margin:5px; padding:6px 12px; border:none; border-radius:8px; background:#8a2be2; color:#fff; cursor:pointer; font-weight:bold; transition:0.3s; }
+#totalModal button:hover { background:#6a1fbf; }
 
-/* قائمة السلة */
-#cartList { text-align: right; margin-bottom: 10px; }
-.cart-item {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom: 1px solid #ccc;
-  padding: 5px 0;
-  flex-wrap: wrap;
+#cartList .cart-item {
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  border-bottom:1px solid #ccc;
+  padding:4px 0;
+  flex-wrap:wrap;
 }
-.cart-item span { margin: 0 5px; min-width: 60px; word-break: break-word; }
-.cart-item button { padding: 2px 8px; font-size: 14px; display:block; margin-top:5px; }
-
-/* الأرقام تحت بعض */
-#orderNumbers a {
-  display: block;
-  margin: 5px 0;
-  font-size: 16px;
-  color: #8a2be2;
-  font-weight: bold;
-  text-decoration: none;
-}
-#orderNumbers a:hover { color: #6a1fbf; text-decoration: underline; }
+#cartList .cart-item span { margin:0 4px; }
 
 /* Toast */
 #toast {
-  position: fixed;
-  bottom: 20px; right: 20px;
-  background: #25d366;
-  color: #fff;
-  padding: 10px 20px;
-  border-radius: 10px;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.3);
-  display: none;
-  z-index: 1003;
+  position:fixed;
+  bottom:20px; right:20px;
+  background:#25d366;
+  color:#fff;
+  padding:8px 16px;
+  border-radius:8px;
+  display:none;
+  z-index:1003;
 }
 
-/* تحسين الموبايل */
-@media (max-width: 600px){
-  #products-container { grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); }
-  .product img { height: 120px; }
+@media(max-width:600px){
+  #products-container { grid-template-columns: repeat(auto-fill,minmax(140px,1fr)); }
+  .product img { height:120px; }
 }
 </style>
 </head>
 <body>
 
 <header>
-  📦 جميع منتجات جنة
-  <div class="header-buttons">
-    <button id="cartBtn">🛒 السلة <span id="cart-count">0</span></button>
-    <button id="totalBtn">💰 إجمالي الفاتورة</button>
-    <button id="supportBtn">☎️ الدعم الفني</button>
-    <button onclick="window.location.href='index.html'">🔙 القائمة الرئيسية</button>
-    <button id="notifBtn">🔔 <span id="notif-count">0</span></button>
-  </div>
-  <input type="text" id="searchBox" placeholder="🔍 ابحث عن منتج...">
+📦 جميع منتجات جنة
+<div class="header-buttons">
+  <button id="cartBtn">🛒 السلة <span id="cart-count">0</span></button>
+  <button id="totalBtn">💰 إجمالي الفاتورة</button>
+  <button id="supportBtn">☎️ الدعم الفني</button>
+  <button onclick="window.location.href='index.html'">🔙 الرئيسية</button>
+  <button id="notifBtn">🔔 <span id="notif-count">0</span></button>
+</div>
+<input type="text" id="searchBox" placeholder="🔍 ابحث عن منتج...">
 </header>
 
 <div id="newBanner">🎉 منتجات جديدة اليوم!</div>
 <div id="products-container"></div>
 
 <div id="totalModal">
-  <h2>إجمالي الفاتورة: <span id="totalAmount">0</span> جنيه</h2>
-  <div id="cartList"></div>
-  <button id="sendBtn">📤 إرسال عبر واتساب</button>
-  <button onclick="closeTotalModal()">❌ إغلاق</button>
-  <div id="orderNumbers" style="margin-top:10px; display:none;">
-    <p>اختر رقم لإرسال الطلب 👇</p>
-    <a href="https://wa.me/201067070423" target="_blank">📞 01067070423</a>
-    <a href="https://wa.me/201022495795" target="_blank">📞 01022495795</a>
-    <a href="https://wa.me/201012253500" target="_blank">📞 01012253500</a>
-  </div>
+<h2>إجمالي الفاتورة: <span id="totalAmount">0</span> جنيه</h2>
+<div id="cartList"></div>
+<button id="sendBtn">📤 إرسال عبر واتساب</button>
+<button onclick="closeTotalModal()">❌ إغلاق</button>
+<div id="orderNumbers" style="margin-top:10px; display:none;">
+<p>اختر رقم لإرسال الطلب 👇</p>
+<a href="https://wa.me/201067070423" target="_blank">📞 01067070423</a>
+<a href="https://wa.me/201022495795" target="_blank">📞 01022495795</a>
+<a href="https://wa.me/201012253500" target="_blank">📞 01012253500</a>
+</div>
 </div>
 
 <div id="toast">تمت الإضافة إلى السلة</div>
 
-<script defer>
+<script>
 const SCRIPT_PRODUCTS_URL = "https://script.google.com/macros/s/AKfycbxW3_pcjSfffMTLZefZpzFIrbhijiaWY_u_4ZAmXEV2O04SMN5zplucKnAugWWbP8zzmA/exec";
 const container = document.getElementById("products-container");
 let productsData = [];
-let cart = [];
-
-// استرجاع السلة من localStorage
-if(localStorage.getItem("cart")){
-  cart = JSON.parse(localStorage.getItem("cart"));
-}
+let cart = JSON.parse(localStorage.getItem("cart")) || [];
 
 // عرض المنتجات
 function renderProducts(data){
-  let html = "";
+  let html="";
   for(let i=0;i<data.length;i++){
-      const item = data[i];
-      html += `<div class="product">
-                  <img src="${item.image || 'https://via.placeholder.com/150'}">
-                  <div class="product-info">
-                    <div class="name">${item.name}</div>
-                    <div class="price">${item.price} جنيه</div>
-                    <input type="number" min="1" value="1" data-index="${i}">
-                    <button onclick="addToCart(${i})">أضف إلى السلة</button>
-                  </div>
-               </div>`;
+    const item=data[i];
+    html+=`<div class="product">
+      <img src="${item.image||'https://via.placeholder.com/150'}">
+      <div class="product-info">
+        <div class="name">${item.name}</div>
+        <div class="price">السعر: ${item.price} جنيه</div>
+        <input type="number" min="1" value="${cart[i]||1}" data-index="${i}">
+        <button onclick="addToCart(${i})">أضف إلى السلة</button>
+      </div>
+    </div>`;
   }
-  container.innerHTML = html;
+  container.innerHTML=html;
+  updateCartCount();
 }
 
-// تحميل سريع للمنتجات
+// تحميل المنتجات من الشيت
 (async function(){
-   if(localStorage.getItem("products")){
-      productsData = JSON.parse(localStorage.getItem("products"));
-      renderProducts(productsData);
-   }
-   try {
-     const res = await fetch(SCRIPT_PRODUCTS_URL, {cache:"no-store"});
-     const data = await res.json();
-     productsData = data.reverse();
-     localStorage.setItem("products", JSON.stringify(productsData));
-     renderProducts(productsData);
-     setTimeout(checkNewProducts, 1500);
-   } catch(err){ console.log("❌ خطأ في جلب المنتجات:",err); }
+  try{
+    const res = await fetch(SCRIPT_PRODUCTS_URL, {cache:"no-store"});
+    const data = await res.json();
+    productsData = data.reverse();
+    localStorage.setItem("products", JSON.stringify(productsData));
+    renderProducts(productsData);
+    checkNewProducts();
+  }catch(err){ console.log("❌ خطأ في جلب المنتجات:",err);}
 })();
 
 function showToast(msg){
-  const toast = document.getElementById("toast");
-  toast.innerText = msg;
-  toast.style.display = "block";
-  setTimeout(()=>toast.style.display="none",1200);
+  const t=document.getElementById("toast");
+  t.innerText=msg;
+  t.style.display="block";
+  setTimeout(()=>t.style.display="none",1200);
 }
 
 function updateCartCount(){
-  const count = cart.reduce((sum, qty)=> qty ? sum+qty : sum, 0);
-  const badge = document.getElementById("cart-count");
+  const count = cart.reduce((sum, qty)=> qty? sum+qty:sum,0);
+  const badge=document.getElementById("cart-count");
   badge.style.display = count>0?"inline-block":"none";
-  badge.innerText = count;
+  badge.innerText=count;
   localStorage.setItem("cart", JSON.stringify(cart));
 }
 
 function addToCart(index){
   const input = container.querySelector(`input[data-index='${index}']`);
-  const quantity = parseInt(input.value);
-  if(quantity<=0) return;
-  cart[index] = (cart[index] || 0) + quantity;
+  const qty = parseInt(input.value);
+  if(qty<=0) return;
+  cart[index]=(cart[index]||0)+qty;
   updateCartCount();
-  showToast(`${productsData[index].name} تم إضافته/تحديثه في السلة`);
+  showToast(`${productsData[index].name} تمت إضافته/تحديثه`);
 }
 
+// عرض الفاتورة
 function showTotal(){
   let total=0;
   const cartList=document.getElementById("cartList");
@@ -324,14 +264,10 @@ function showTotal(){
       total+=lineTotal;
       const div=document.createElement("div");
       div.className="cart-item";
-      div.innerHTML=`
-        <span>${productsData[idx].name}</span>
-        <span>الكمية: <input type="number" min="1" value="${qty}" style="width:50px;" onchange="updateQty(${idx},this.value)">
-          <br><button onclick="removeItem(${idx})">حذف</button>
-        </span>
-        <span>السعر: ${price}</span>
-        <span>الإجمالي: ${lineTotal}</span>
-      `;
+      div.innerHTML=`<span>${productsData[idx].name}</span>
+        <span>السعر: ${price} × 
+        <input type="number" min="1" value="${qty}" style="width:40px;" onchange="updateQty(${idx},this.value)"> = <strong>${lineTotal}</strong> جنيه</span>
+        <button onclick="removeItem(${idx})">حذف</button>`;
       cartList.appendChild(div);
     }
   });
@@ -339,12 +275,13 @@ function showTotal(){
   document.getElementById("totalModal").style.display="block";
 }
 
-function updateQty(idx,value){ value=parseInt(value); if(value<=0) delete cart[idx]; else cart[idx]=value; updateCartCount(); showTotal(); }
-function removeItem(idx){ delete cart[idx]; updateCartCount(); showTotal(); }
+function updateQty(idx,value){ value=parseInt(value); if(value<=0) delete cart[idx]; else cart[idx]=value; updateCartCount(); showTotal();}
+function removeItem(idx){ delete cart[idx]; updateCartCount(); showTotal();}
 function closeTotalModal(){ document.getElementById("totalModal").style.display='none'; }
 
-document.getElementById("sendBtn").onclick = function(){
-  const orderDiv = document.getElementById("orderNumbers");
+// إرسال الطلب
+document.getElementById("sendBtn").onclick=function(){
+  const orderDiv=document.getElementById("orderNumbers");
   orderDiv.style.display="block";
   orderDiv.querySelectorAll("a").forEach(a=>{
     a.onclick=(e)=>{
@@ -353,29 +290,32 @@ document.getElementById("sendBtn").onclick = function(){
       let total=0;
       cart.forEach((qty,idx)=>{
         if(qty){
-          const price=productsData[idx].price;
-          const lineTotal=qty*price;
+          const price = productsData[idx].price;
+          const lineTotal = qty*price;
           total+=lineTotal;
-          text+=`${productsData[idx].name} | ${qty} | ${price} | ${lineTotal}\n`;
+          text+=`${productsData[idx].name} × ${qty} = ${lineTotal} جنيه\n`;
         }
       });
-      text+=`المجموع الكلي: ${total} جنيه`;
+      text+=`\nالمجموع الكلي: ${total} جنيه`;
       window.open(`${a.href}?text=${encodeURIComponent(text)}`,"_blank");
     }
   });
 }
 
+// أزرار الهيدر
 document.getElementById("cartBtn").onclick=showTotal;
 document.getElementById("totalBtn").onclick=showTotal;
 document.getElementById("supportBtn").onclick=()=>window.open("https://wa.me/201022495795","_blank");
 
+// إشعارات المنتجات الجديدة
 function checkNewProducts(){
   const today=(new Date()).toISOString().split("T")[0];
   let newCount=0;
-  productsData.forEach(p=>{ if(p.date&&p.date.startsWith(today)) newCount++; });
+  productsData.forEach(p=>{ if(p.is_new) newCount++; });
   if(newCount>0){
-    document.getElementById("notif-count").innerText=newCount;
-    document.getElementById("notif-count").style.display="inline-block";
+    const badge=document.getElementById("notif-count");
+    badge.innerText=newCount;
+    badge.style.display="inline-block";
     document.getElementById("newBanner").style.display="block";
     let audio=new Audio("https://www.soundjay.com/buttons/sounds/button-3.mp3"); audio.play();
     if(Notification.permission==="granted") new Notification(`تم إضافة ${newCount} منتجات جديدة اليوم 🎉`);
@@ -383,14 +323,12 @@ function checkNewProducts(){
   }
 }
 
-document.getElementById("searchBox").addEventListener("input", function(){
+// البحث
+document.getElementById("searchBox").addEventListener("input",function(){
   const keyword=this.value.trim().toLowerCase();
   const filtered=productsData.filter(p=>p.name.toLowerCase().includes(keyword));
   renderProducts(filtered);
 });
-
-// تحديث العداد بعد التحميل
-updateCartCount();
 </script>
 </body>
 </html>
