--- a/products.html
+++ b/products.html
@@ -11,7 +11,7 @@ body { font-family: Tahoma,sans-serif; margin:0; background:#f9f9f9; }
 header {
   background: #131921;
   color: white;
-  padding: 10px;
+  padding: 15px;
   text-align: center;
   font-size: 20px;
   font-weight: bold;
@@ -19,7 +19,7 @@ header {
   top: 0;
   z-index: 1000;
 }
-.header-buttons { display: flex; justify-content: center; gap:5px; flex-wrap: wrap; margin-top:5px;}
+.header-buttons { margin-top: 10px; display: flex; flex-wrap: wrap; justify-content: center; gap:5px;}
 .header-buttons button {
   background: #ffd814;
   border: 1px solid #fcd200;
@@ -27,9 +27,43 @@ header {
   border-radius: 6px;
   cursor: pointer;
   font-weight: bold;
-  position: relative;
 }
 .header-buttons button:hover { background: #f7ca00; }
+
+/* زر الجرس */
+#notifBtn {
+  position: relative;
+  background: #ff4444;
+  border: 1px solid #cc0000;
+  padding: 6px 12px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: bold;
+  color: #fff;
+}
+#notif-count {
+  position: absolute;
+  top: -8px;
+  right: -8px;
+  background: yellow;
+  color: black;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 2px 6px;
+  border-radius: 50%;
+  display: none;
+}
+
+/* بانر المنتج الجديد */
+#newBanner {
+  display: none;
+  background: red;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  font-size: 20px;
+  font-weight: bold;
+}
 
 /* عداد السلة */
 #cart-count {
@@ -45,31 +79,6 @@ header {
   display: none;
 }
 
-/* زر الجرس */
-#notifBtn span {
-  position: absolute;
-  top: -8px;
-  right: -8px;
-  background: red;
-  color: #fff;
-  font-size: 12px;
-  font-weight: bold;
-  padding: 2px 6px;
-  border-radius: 50%;
-  display: none;
-}
-
-/* بانر المنتج الجديد */
-#newBanner {
-  display: none;
-  background: red;
-  color: white;
-  text-align: center;
-  padding: 8px;
-  font-size: 18px;
-  font-weight: bold;
-}
-
 /* مربع البحث */
 #searchBox {
   display: block;
@@ -77,206 +86,238 @@ header {
   padding: 8px;
   width: 85%;
   max-width: 350px;
-  border-radius: 6px;
+  border-radius: 8px;
   border: 1px solid #ccc;
-  font-size: 16px;
-  box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+  font-size: 14px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.1);
 }
 
 /* المنتجات */
 #products-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill,minmax(180px,1fr));
+  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
   gap: 12px;
-  padding: 10px;
+  padding: 15px;
 }
 .product {
-  background: #fff;
+  border: 1px solid #ccc;
   border-radius: 10px;
-  overflow: hidden;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  padding: 10px;
   text-align: center;
-  transition:0.3s;
+  background: #fff;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  transition: 0.3s;
 }
 .product:hover { box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
-.product img { width: 100%; height: 140px; object-fit: contain; background:#f9f9f9; }
-.product-info { padding:8px; }
-.product-info .name { font-weight:bold; color:#333; margin-bottom:5px; }
-.product-info .price { color:#8a2be2; margin-bottom:5px; font-weight:bold; }
-.product input { width:50px; margin:5px 0; border-radius:5px; border:1px solid #ccc; text-align:center; }
-.product button { padding:6px 10px; border:none; border-radius:5px; background:#8a2be2; color:#fff; cursor:pointer; font-weight:bold; transition:0.3s; }
-.product button:hover { background:#6a1fbf; transform:scale(1.05); }
+.product img {
+  width: 100%;
+  height: 150px;
+  object-fit: contain;
+  margin-bottom: 8px;
+}
+.product .name { font-size: 16px; margin: 5px 0; color: #333; font-weight:bold; }
+.product .price { font-weight: bold; margin-bottom: 5px; color:#8a2be2; }
+.product input { width: 50px; margin: 5px 0; border-radius: 5px; border: 1px solid #ccc; text-align: center; }
+.product button {
+  padding: 6px 10px;
+  border: none;
+  border-radius: 5px;
+  background: #8a2be2;
+  color: #fff;
+  cursor: pointer;
+  font-weight: bold;
+  transition: 0.3s;
+}
+.product button:hover { background: #6a1fbf; transform: scale(1.05); }
 
 /* نافذة اجمالي الفاتورة */
 #totalModal {
-  display:none;
-  position:fixed;
-  top:50%; left:50%;
-  transform:translate(-50%,-50%);
-  background:#fff;
-  padding:15px;
-  border-radius:12px;
-  box-shadow:0 3px 15px rgba(0,0,0,0.3);
-  z-index:1002;
-  width:90%;
-  max-width:450px;
-  max-height:80%;
-  overflow-y:auto;
-  text-align:right;
+  display: none;
+  position: fixed;
+  top: 50%; left: 50%;
+  transform: translate(-50%,-50%);
+  background: #fff;
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 0 3px 15px rgba(0,0,0,0.3);
+  text-align: center;
+  z-index: 1002;
+  width: 90%;
+  max-width: 450px;
+  max-height: 80%;
+  overflow-y: auto;
 }
-#totalModal h2 { color:#8a2be2; margin-bottom:12px; }
-#totalModal button { margin:5px; padding:6px 12px; border:none; border-radius:8px; background:#8a2be2; color:#fff; cursor:pointer; font-weight:bold; transition:0.3s; }
+#totalModal h2 { font-size: 20px; margin-bottom: 15px; color: #8a2be2; }
+#totalModal button { margin:5px; padding:8px 15px; border:none; border-radius:10px; background:#8a2be2; color:#fff; cursor:pointer; font-weight:bold; transition:0.3s; }
 #totalModal button:hover { background:#6a1fbf; }
 
-#cartList .cart-item {
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  border-bottom:1px solid #ccc;
-  padding:4px 0;
-  flex-wrap:wrap;
+/* قائمة السلة */
+#cartList { text-align: right; margin-bottom: 10px; }
+.cart-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #ccc;
+  padding: 5px 0;
+  flex-wrap: wrap;
 }
-#cartList .cart-item span { margin:0 4px; }
+.cart-item span { margin: 0 5px; }
+.cart-item button { padding: 2px 8px; font-size: 14px; }
+
+/* الأرقام تحت بعض */
+#orderNumbers a { display: block; margin:5px 0; font-size:16px; color:#8a2be2; font-weight:bold; text-decoration:none; }
+#orderNumbers a:hover { color:#6a1fbf; text-decoration:underline; }
 
 /* Toast */
 #toast {
-  position:fixed;
-  bottom:20px; right:20px;
-  background:#25d366;
-  color:#fff;
-  padding:8px 16px;
-  border-radius:8px;
-  display:none;
-  z-index:1003;
-}
-
-@media(max-width:600px){
-  #products-container { grid-template-columns: repeat(auto-fill,minmax(140px,1fr)); }
-  .product img { height:120px; }
+  position: fixed;
+  bottom: 20px; right: 20px;
+  background: #25d366;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+  display: none;
+  z-index: 1003;
 }
 </style>
 </head>
 <body>
 
 <header>
-📦 جميع منتجات جنة
-<div class="header-buttons">
-  <button id="cartBtn">🛒 السلة <span id="cart-count">0</span></button>
-  <button id="totalBtn">💰 إجمالي الفاتورة</button>
-  <button id="supportBtn">☎️ الدعم الفني</button>
-  <button onclick="window.location.href='index.html'">🔙 الرئيسية</button>
-  <button id="notifBtn">🔔 <span id="notif-count">0</span></button>
-</div>
-<input type="text" id="searchBox" placeholder="🔍 ابحث عن منتج...">
+  📦 جميع منتجات جنة
+  <div class="header-buttons">
+    <button id="cartBtn">🛒 السلة <span id="cart-count">0</span></button>
+    <button id="totalBtn">💰 إجمالي الفاتورة</button>
+    <button id="supportBtn">☎️ الدعم الفني</button>
+    <button onclick="window.location.href='index.html'">🔙 القائمة الرئيسية</button>
+    <button id="notifBtn">🔔 <span id="notif-count">0</span></button>
+  </div>
+  <input type="text" id="searchBox" placeholder="🔍 ابحث عن منتج...">
 </header>
 
 <div id="newBanner">🎉 منتجات جديدة اليوم!</div>
 <div id="products-container"></div>
 
 <div id="totalModal">
-<h2>إجمالي الفاتورة: <span id="totalAmount">0</span> جنيه</h2>
-<div id="cartList"></div>
-<button id="sendBtn">📤 إرسال عبر واتساب</button>
-<button onclick="closeTotalModal()">❌ إغلاق</button>
-<div id="orderNumbers" style="margin-top:10px; display:none;">
-<p>اختر رقم لإرسال الطلب 👇</p>
-<a href="https://wa.me/201067070423" target="_blank">📞 01067070423</a>
-<a href="https://wa.me/201022495795" target="_blank">📞 01022495795</a>
-<a href="https://wa.me/201012253500" target="_blank">📞 01012253500</a>
-</div>
+  <h2>إجمالي الفاتورة: <span id="totalAmount">0</span> جنيه</h2>
+  <div id="cartList"></div>
+  <button id="sendBtn">📤 إرسال عبر واتساب</button>
+  <button onclick="closeTotalModal()">❌ إغلاق</button>
+  <div id="orderNumbers" style="margin-top:10px; display:none;">
+    <p>اختر رقم لإرسال الطلب 👇</p>
+    <a href="https://wa.me/201067070423" target="_blank">📞 01067070423</a>
+    <a href="https://wa.me/201022495795" target="_blank">📞 01022495795</a>
+    <a href="https://wa.me/201012253500" target="_blank">📞 01012253500</a>
+  </div>
 </div>
 
 <div id="toast">تمت الإضافة إلى السلة</div>
 
-<script>
+<script defer>
 const SCRIPT_PRODUCTS_URL = "https://script.google.com/macros/s/AKfycbxW3_pcjSfffMTLZefZpzFIrbhijiaWY_u_4ZAmXEV2O04SMN5zplucKnAugWWbP8zzmA/exec";
 const container = document.getElementById("products-container");
 let productsData = [];
-let cart = JSON.parse(localStorage.getItem("cart")) || [];
+let cart = [];
 
-// عرض المنتجات
+// عرض المنتجات بكفاءة
 function renderProducts(data){
-  let html="";
-  for(let i=0;i<data.length;i++){
-    const item=data[i];
-    html+=`<div class="product">
+  container.innerHTML = "";
+  const frag = document.createDocumentFragment();
+  data.forEach((item,i)=>{
+    const div = document.createElement("div");
+    div.className="product";
+    div.innerHTML=`
       <img src="${item.image||'https://via.placeholder.com/150'}">
-      <div class="product-info">
-        <div class="name">${item.name}</div>
-        <div class="price">السعر: ${item.price} جنيه</div>
-        <input type="number" min="1" value="${cart[i]||1}" data-index="${i}">
-        <button onclick="addToCart(${i})">أضف إلى السلة</button>
-      </div>
-    </div>`;
-  }
-  container.innerHTML=html;
+      <div class="name">${item.name}</div>
+      <div class="price">السعر: ${item.price} جنيه</div>
+      <input type="number" min="1" value="${cart[i]||1}" data-index="${i}">
+      <button onclick="addToCart(${i})">أضف إلى السلة</button>
+    `;
+    frag.appendChild(div);
+  });
+  container.appendChild(frag);
   updateCartCount();
 }
 
-// تحميل المنتجات من الشيت
+// تحميل سريع للمنتجات
 (async function(){
+  if(localStorage.getItem("products")){
+    productsData=JSON.parse(localStorage.getItem("products"));
+    renderProducts(productsData);
+  }
   try{
-    const res = await fetch(SCRIPT_PRODUCTS_URL, {cache:"no-store"});
+    const res = await fetch(SCRIPT_PRODUCTS_URL,{cache:"no-store"});
     const data = await res.json();
     productsData = data.reverse();
-    localStorage.setItem("products", JSON.stringify(productsData));
+    localStorage.setItem("products",JSON.stringify(productsData));
     renderProducts(productsData);
-    checkNewProducts();
+    setTimeout(checkNewProducts,1500);
   }catch(err){ console.log("❌ خطأ في جلب المنتجات:",err);}
 })();
 
 function showToast(msg){
-  const t=document.getElementById("toast");
-  t.innerText=msg;
-  t.style.display="block";
-  setTimeout(()=>t.style.display="none",1200);
+  const toast = document.getElementById("toast");
+  toast.innerText=msg;
+  toast.style.display="block";
+  setTimeout(()=>toast.style.display="none",1200);
 }
 
 function updateCartCount(){
-  const count = cart.reduce((sum, qty)=> qty? sum+qty:sum,0);
-  const badge=document.getElementById("cart-count");
+  const count = cart.reduce((sum, qty)=> qty ? sum+qty : sum, 0);
+  const badge = document.getElementById("cart-count");
   badge.style.display = count>0?"inline-block":"none";
   badge.innerText=count;
-  localStorage.setItem("cart", JSON.stringify(cart));
 }
 
 function addToCart(index){
   const input = container.querySelector(`input[data-index='${index}']`);
-  const qty = parseInt(input.value);
-  if(qty<=0) return;
-  cart[index]=(cart[index]||0)+qty;
+  const quantity=parseInt(input.value);
+  if(quantity<=0) return;
+  cart[index] = (cart[index]||0)+quantity;
   updateCartCount();
-  showToast(`${productsData[index].name} تمت إضافته/تحديثه`);
+  showToast(`${productsData[index].name} تم إضافته/تحديثه في السلة`);
 }
 
-// عرض الفاتورة
+// عرض الفاتورة بتنسيق ثابت
 function showTotal(){
-  let total=0;
-  const cartList=document.getElementById("cartList");
+  const cartList = document.getElementById("cartList");
   cartList.innerHTML="";
+  let total=0;
   cart.forEach((qty,idx)=>{
-    if(qty){
-      const price = productsData[idx].price;
-      const lineTotal = qty*price;
-      total+=lineTotal;
-      const div=document.createElement("div");
-      div.className="cart-item";
-      div.innerHTML=`<span>${productsData[idx].name}</span>
-        <span>السعر: ${price} × 
-        <input type="number" min="1" value="${qty}" style="width:40px;" onchange="updateQty(${idx},this.value)"> = <strong>${lineTotal}</strong> جنيه</span>
-        <button onclick="removeItem(${idx})">حذف</button>`;
-      cartList.appendChild(div);
-    }
+    if(!qty) return;
+    const item = productsData[idx];
+    const lineTotal = qty*item.price;
+    total+=lineTotal;
+
+    const div=document.createElement("div");
+    div.className="cart-item";
+
+    const nameSpan=document.createElement("span");
+    nameSpan.innerText=item.name;
+
+    const qtySpan=document.createElement("span");
+    qtySpan.innerHTML=`السعر: ${item.price} × `;
+    const input=document.createElement("input");
+    input.type="number"; input.min=1; input.value=qty; input.style.width="40px";
+    input.onchange=()=>updateQty(idx,input.value);
+    qtySpan.appendChild(input);
+    qtySpan.innerHTML += ` = ${lineTotal} جنيه`;
+
+    const delBtn=document.createElement("button");
+    delBtn.innerText="حذف"; delBtn.onclick=()=>removeItem(idx);
+
+    div.appendChild(nameSpan);
+    div.appendChild(qtySpan);
+    div.appendChild(delBtn);
+    cartList.appendChild(div);
   });
   document.getElementById("totalAmount").innerText=total;
   document.getElementById("totalModal").style.display="block";
 }
 
-function updateQty(idx,value){ value=parseInt(value); if(value<=0) delete cart[idx]; else cart[idx]=value; updateCartCount(); showTotal();}
-function removeItem(idx){ delete cart[idx]; updateCartCount(); showTotal();}
+function updateQty(idx,value){ value=parseInt(value); if(value<=0) delete cart[idx]; else cart[idx]=value; updateCartCount(); showTotal(); }
+function removeItem(idx){ delete cart[idx]; updateCartCount(); showTotal(); }
 function closeTotalModal(){ document.getElementById("totalModal").style.display='none'; }
 
 // إرسال الطلب
@@ -286,18 +327,17 @@ document.getElementById("sendBtn").onclick=function(){
   orderDiv.querySelectorAll("a").forEach(a=>{
     a.onclick=(e)=>{
       e.preventDefault();
-      let text="🧾 طلبية جديدة\n\n";
+      let text="طلبية:%0A%0A";
       let total=0;
       cart.forEach((qty,idx)=>{
         if(qty){
-          const price = productsData[idx].price;
-          const lineTotal = qty*price;
+          const lineTotal=qty*productsData[idx].price;
           total+=lineTotal;
-          text+=`${productsData[idx].name} × ${qty} = ${lineTotal} جنيه\n`;
+          text+=`${productsData[idx].name} × ${qty} = ${lineTotal} جنيه%0A`;
         }
       });
-      text+=`\nالمجموع الكلي: ${total} جنيه`;
-      window.open(`${a.href}?text=${encodeURIComponent(text)}`,"_blank");
+      text+=`%0Aالمجموع الكلي: ${total} جنيه`;
+      window.open(`${a.href}?text=${text}`,"_blank");
     }
   });
 }
@@ -311,11 +351,10 @@ document.getElementById("supportBtn").onclick=()=>window.open("https://wa.me/201
 function checkNewProducts(){
   const today=(new Date()).toISOString().split("T")[0];
   let newCount=0;
-  productsData.forEach(p=>{ if(p.is_new) newCount++; });
+  productsData.forEach(p=>{ if(p.date&&p.date.startsWith(today)) newCount++; });
   if(newCount>0){
-    const badge=document.getElementById("notif-count");
-    badge.innerText=newCount;
-    badge.style.display="inline-block";
+    document.getElementById("notif-count").innerText=newCount;
+    document.getElementById("notif-count").style.display="inline-block";
     document.getElementById("newBanner").style.display="block";
     let audio=new Audio("https://www.soundjay.com/buttons/sounds/button-3.mp3"); audio.play();
     if(Notification.permission==="granted") new Notification(`تم إضافة ${newCount} منتجات جديدة اليوم 🎉`);
@@ -324,7 +363,7 @@ function checkNewProducts(){
 }
 
 // البحث
-document.getElementById("searchBox").addEventListener("input",function(){
+document.getElementById("searchBox").addEventListener("input", function(){
   const keyword=this.value.trim().toLowerCase();
   const filtered=productsData.filter(p=>p.name.toLowerCase().includes(keyword));
   renderProducts(filtered);
