--- a/products.html
+++ b/products.html
@@ -19,22 +19,21 @@ header {
   top: 0;
   z-index: 1000;
 }
-
-/* أزرار الهيدر */
-.header-buttons {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap:5px;
+.header-buttons { 
+  margin-top: 10px; 
+  display: flex; 
+  flex-wrap: wrap; 
+  justify-content: center; 
+  gap:10px;
 }
 .header-buttons button {
   background: #ffd814;
   border: 1px solid #fcd200;
-  padding: 6px 12px;
-  border-radius: 6px;
+  padding: 10px 18px;
+  border-radius: 8px;
   cursor: pointer;
   font-weight: bold;
-  margin: 0;
+  font-size: 16px;
 }
 .header-buttons button:hover { background: #f7ca00; }
 
@@ -43,8 +42,8 @@ header {
   position: relative;
   background: #ff4444;
   border: 1px solid #cc0000;
-  padding: 6px 12px;
-  border-radius: 6px;
+  padding: 10px 18px;
+  border-radius: 8px;
   cursor: pointer;
   font-weight: bold;
   color: #fff;
@@ -55,7 +54,7 @@ header {
   right: -8px;
   background: yellow;
   color: black;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: bold;
   padding: 2px 6px;
   border-radius: 50%;
@@ -74,16 +73,13 @@ header {
 }
 
 /* عداد السلة */
-#cartBtn {
-  position: relative;
-}
 #cart-count {
   position: absolute;
-  top: -10px;
-  right: -10px;
+  top: -8px;
+  right: -8px;
   background: red;
   color: #fff;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: bold;
   padding: 2px 6px;
   border-radius: 50%;
@@ -137,7 +133,7 @@ header {
   width: 50px; margin: 5px 0; border-radius: 5px; border: 1px solid #ccc; text-align: center;
 }
 .product button {
-  padding: 8px 10px;
+  padding: 10px; margin-top: 5px;
   border: none;
   border-radius: 5px;
   background: #8a2be2;
@@ -160,15 +156,29 @@ header {
   box-shadow: 0 3px 15px rgba(0,0,0,0.3);
   text-align: center;
   z-index: 1002;
-  width: 95%;
-  max-width: 500px;
+  width: 90%;
+  max-width: 600px;
   max-height: 85%;
   overflow-y: auto;
 }
-#totalModal h2 { font-size: 20px; margin-bottom: 15px; color: #8a2be2; }
+
+/* جدول الفاتورة */
+#cartList { text-align: right; margin-bottom: 10px; display: flex; flex-direction: column; gap: 10px; }
+.cart-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  border-bottom: 1px solid #ccc;
+  padding: 5px 0;
+  flex-wrap: wrap;
+}
+.cart-item span { margin: 3px 5px; min-width: 60px; word-break: break-word; }
+.cart-item .remove-btn { margin-top:5px; width:100%; }
+
+/* أزرار الفاتورة */
 #totalModal button {
   margin: 5px;
-  padding: 8px 15px;
+  padding: 10px 18px;
   border: none;
   border-radius: 10px;
   background: #8a2be2;
@@ -178,27 +188,6 @@ header {
   transition: 0.3s;
 }
 #totalModal button:hover { background: #6a1fbf; }
-
-/* قائمة السلة */
-#cartList { text-align: right; margin-bottom: 10px; }
-.cart-item {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  border-bottom: 1px solid #ccc;
-  padding: 5px 0;
-  margin-bottom: 5px;
-}
-.cart-item span { margin: 3px 0; }
-.cart-item .remove-btn {
-  margin-top: 5px;
-  padding: 4px 8px;
-  background: #ff4444;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
 
 /* الأرقام تحت بعض */
 #orderNumbers a {
@@ -228,6 +217,10 @@ header {
 @media (max-width: 600px){
   #products-container { grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); }
   .product img { height: 120px; }
+  #totalModal { width: 95%; padding: 15px; max-height: 90%; }
+  .cart-item { flex-direction: column; font-size: 14px; }
+  .cart-item span { margin: 3px 0; }
+  #totalModal button { font-size: 14px; padding: 8px 12px; }
 }
 </style>
 </head>
@@ -337,7 +330,7 @@ function showTotal(){
       total+=lineTotal;
       const div=document.createElement("div");
       div.className="cart-item";
-      div.innerHTML=`<span><strong>${productsData[idx].name}</strong></span>
+      div.innerHTML=`<span>${productsData[idx].name}</span>
                      <span>الكمية: <input type="number" min="1" value="${qty}" style="width:50px;" onchange="updateQty(${idx},this.value)"></span>
                      <span>السعر: ${price}</span>
                      <span>الإجمالي: ${lineTotal}</span>
